--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,14 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-width: 100vw;
   min-height: 100vh;
 }
+
+
 
 h1 {
   font-size: 3.2em;
