--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,11 @@
   }
 }
 
+.nav-bar {
+  display:flex;
+list-style-type: none;
+justify-content: space-evenly;
+}
 .card {
   padding: 2em;
 }
@@ -41,29 +46,52 @@
   color: #888;
 }
 
-#skins-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 1rem;
+.skin-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
 }
 
 .skin-card {
-  background: #f5f5f5;
-  padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
+background: #e0f1f6aa;
+display: flex;
+flex-wrap: wrap;
+flex-direction: column;
+justify-content: center;
+height: 350px;
+width: 300px;
 }
 
-.skin-img {
-  width: 100%;
+.skin-image {
+  width: 80%;
   height: auto;
   border-radius: 4px;
+ display: flex ;
+ flex-wrap: wrap;
+ padding-left: 10%;
+ 
 }
 
-h3 {
-  margin-top: 1rem;
-  font-size: 1.2rem;
-  font-weight: bold;
+.weapon-name {
+  display: flex;
+  justify-content: center;
+  padding-top: 15%;
+  padding-bottom: 10%;
+}
+
+.add-button {
+  display: flex;
+  justify-content: center;
+  background-color: beige;
+  color: black;
+}
+
+.twitch-streamers {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  flex-wrap: wrap;
+
 }
 
